# beyond-esg

./: .gitignore  NOTICE  README.md  README.pl.md  start_app.ps1  stop_app.ps1
analiza/: 01_flatten_stocktwits_messages.py  02_build_social_features.py  03_build_company_master_dataset.py  04_build_profitability_features.py  05_import_fundamentals_raw.py  06_export_fundamentals_worklist.py  07_build_technical_features.py  08_import_technicals_raw.py  09_generate_portfolio_report.py  10_discover_comment_topics.py  10a_filter_value_frames.py  10b_bertopic_discovery.py  10c_llm_profiling.py  11_build_comment_derived_esg.py  11_fuse_axiological.py  11b_sentiment_per_axis.py  12_cluster_axes.py  12_import_esg_benchmark_csv.py  13_profile_via_codex.py  14_codex_isolation_consistency.py  15_compare_qwen_vs_codex.py  16_fetch_yfinance_financials.py  17_build_face_validity_sample.py  README.md  _recover_from_sessions.py  calibrate_filter_c.py  codex_run_lib.py  filter_value_frames_lib.py  fuse_axiological_lib.py  llm_profiling_lib.py  requirements-analiza.txt
backend/: pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: routes.py
backend/app/services/: catalog.py  data_pipeline.py  datasets.py  instrument_universe.py  market_data.py  portfolio.py  presets.py  reporting.py  saved_profiles.py  scoring.py
backend/scripts/: smoke_test_api.py
backend/tests/: test_axiological_wiring.py  test_perception_score.py
demo/: comment_esg_axes_summary.json  company_master_dataset.jsonl  merged_flat_stocktwits.jsonl
frontend/: index.html  package-lock.json  (+1 more)
(+25 files in other folders)
